--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
                     <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
 
                         <div class="video-icon">
-                           <img src="img/core-img/_15I2640(1) (1).jpg" alt="">
+                           <img src="img/core-img/ap.jpg" alt="">
                         </div>
                     </div>
                 </div>
